--- a/OOP-Project/FundManager.xaml
+++ b/OOP-Project/FundManager.xaml
@@ -23,21 +23,29 @@
                             <Label Content="Current Balance" HorizontalAlignment="Left" Margin="170,-75,0,0" VerticalAlignment="Top" FontSize="20"/>
                             <TextBox x:Name="txtBalanceTransferFrom" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="0,-35,0,0" Width="146" HorizontalAlignment="Right" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
                         </StackPanel>
-                        <StackPanel Width="320" Margin="-750,125,0,168" Background="White">
+                        <StackPanel Width="320" Margin="-750,165,0,128" Background="White">
                             <Label Content="Account Owner" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="20"/>
                             <TextBox x:Name="txtAccountTransferTo" Height="38" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Margin="0,0,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
-                            <Label Content="Current Balance" HorizontalAlignment="Left" Margin="170,-75,0,0" VerticalAlignment="Top" FontSize="20"/>
+                            <Label Content="Sort Code" HorizontalAlignment="Left" Margin="200,-75,0,0" VerticalAlignment="Top" FontSize="20" Width="140"/>
                             <TextBox x:Name="txtBalanceTransferTo" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="0,-35,0,0" Width="146" HorizontalAlignment="Right" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
                         </StackPanel>
-                        <StackPanel Width="150" Margin="-730,20,0,64" Height="80" Background="White" HorizontalAlignment="Left">
+                        <StackPanel Width="150" Margin="-730,100,0,64" Height="80" Background="White" HorizontalAlignment="Left">
                             <Label Content="Transfer From:" Height="31" VerticalAlignment="Top" Margin="10,0,0,0"/>
                             <ComboBox HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120"/>
                         </StackPanel>
-                        <StackPanel Width="146" Margin="-250,20,0,269" Background="White">
-                            <Label Content="Overdraft Limit" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="20"/>
-                            <TextBox x:Name="txtOverdraftLimit" Height="38" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Margin="0,0,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
-                         </StackPanel>
-                        <Button x:Name="btnTransfer" Content="Transfer Funds" Margin="-730,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" Click="btnTransfer_Click" HorizontalAlignment="Left" />
+                        <StackPanel Width="79" Margin="-250,20,0,269" Background="White">
+                            <Label Content="Overdraft Limit" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="10"/>
+                            <TextBox x:Name="txtOverdraftLimit" Height="14" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="77" HorizontalAlignment="Left" FontSize="10" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                            <Label Content="Account Type" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="10"/>
+                            <TextBox x:Name="txtAccountType" Height="14" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="77" HorizontalAlignment="Left" FontSize="10" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+
+                        </StackPanel>
+                        <Button x:Name="btnTransfer" Content="Transfer Funds" Margin="-730,200,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" Click="btnTransfer_Click" HorizontalAlignment="Left" />
+
+                        <StackPanel Width="150" Margin="-1310,103,0,208" Background="White">
+                            <Label Content="Transfer Amount" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" FontSize="12"/>
+                            <TextBox x:Name="txtTransferAmount" Height="19" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Margin="20,0,0,0" Width="100" HorizontalAlignment="Left" FontSize="12" Background="White" TextAlignment="Center"/>
+                        </StackPanel>
 
                     </DockPanel>
                 </Grid>
@@ -46,7 +54,7 @@
                 <Grid Background="#FFE5E5E5">
                     <DockPanel Margin="10,10,9.8,10">
                         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="352" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="748"/>
-                        <ComboBox x:Name="cboAccNoW" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24" SelectionChanged="cboAccNoW_SelectionChanged"/>
+                        <ComboBox x:Name="cmbAccountWithdraw" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24"/>
                         <Label Content="Selected Account" HorizontalAlignment="Left" Margin="-730,20,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <Label Content="Withdraw Amount" HorizontalAlignment="Left" Margin="-730,120,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <TextBox x:Name="txtWAmount" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
@@ -63,7 +71,7 @@
                 <Grid Background="#FFE5E5E5">
                     <DockPanel Margin="10,10,9.8,10">
                         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="352" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="748"/>
-                        <ComboBox x:Name="cboAccNo" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24" SelectionChanged="cboAccNo_SelectionChanged"/>
+                        <ComboBox x:Name="cboAccNoD" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24" SelectionChanged="cboAccNoD_SelectionChanged"/>
                         <Label Content="Selected Account" HorizontalAlignment="Left" Margin="-730,20,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <Label Content="Deposit Amount" HorizontalAlignment="Left" Margin="-730,120,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <TextBox x:Name="txtDAmount" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
