--- a/OOP-Project/FundManager.xaml
+++ b/OOP-Project/FundManager.xaml
@@ -30,7 +30,7 @@
                             <TextBox x:Name="txtRSortCode" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="0,-35,0,0" Width="146" HorizontalAlignment="Right" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
                         </StackPanel>
                         <StackPanel Width="150" Margin="-730,100,0,64" Height="80" Background="White" HorizontalAlignment="Left">
-                            <Label Content="Transfer From:" Height="31" VerticalAlignment="Top" Margin="10,0,0,0"/>
+                            <Label Content="Transfer To:" Height="31" VerticalAlignment="Top" Margin="10,0,0,0"/>
                             <ComboBox x:Name="cboToAccNo" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cboToAccNo_SelectionChanged"/>
                         </StackPanel>
                         <StackPanel Width="79" Margin="-250,20,0,269" Background="White">
@@ -54,7 +54,7 @@
                 <Grid Background="#FFE5E5E5">
                     <DockPanel Margin="10,10,9.8,10">
                         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="352" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="748"/>
-                        <ComboBox x:Name="cboAccNoW" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24"/>
+                        <ComboBox x:Name="cboAccNoW" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24" SelectionChanged="cboAccNoW_SelectionChanged"/>
                         <Label Content="Selected Account" HorizontalAlignment="Left" Margin="-730,20,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <Label Content="Withdraw Amount" HorizontalAlignment="Left" Margin="-730,120,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <TextBox x:Name="txtWAmount" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
